# symbiote

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .symgateway  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INFRA.md  LICENSE-COMMERCIAL.md  QUICKSTART.md  README.md  clark-discovered-tools.txt  clark-system-prompt.txt  dev-requirements.txt  harness_plan.md  install_precommit.sh  pyproject.toml  ruff.toml  setup_env.sh  symbiote.db
.context/: a85720ba-2be2-4a68-bbe7-99fdb4e8d6ec.md  index.json  sprint-final.json  sprint.json
.context/archive/: sprint-discovery-service.json
.gitea/workflows/: staging-deploy.yml
docs/: CLARK_MIGRATION_v0.3.md  HARNESS_EVOLUTION.md  HOST_INTEGRATION.md  README.md  ROLLOUT.md  arch-01-structural.md  arch-02-execution.md  arch-03-memory.md  arch-04-dream-mode.md  fast-track-flow.md  integration-younews-clark.md
docs/integrations/: symbiote-browser-quickstart.md  symbiote-browser.md
docs/releases/: v0.6.0.md  v0.6.2.md
kb/: 2026-03-30_hermes-recommendations-for-symbiote.md  2026-03-30_nanobot-analysis.md  meta-harness-analysis.md  migracao-clark-discovery.md  ralph-loop-analysis.md  tool-loop-model-benchmarks.md
process/: README.md
process/fast_track/: FAST_TRACK_IDS.md  FAST_TRACK_PROCESS.md  FAST_TRACK_PROCESS.yml  README.md  SUMMARY_FOR_AGENTS.md
process/skills/: README.md  backlog.md  feature.md
project/docs/: PRD.md  SPEC.md  TASK_LIST.md  hipotese.md  retro-cycle-01.md  (+10 more)
scripts/: compare_modes_llm.py  demo_browser.py
symbiote-ui/: README.md  build.sh
tests/: README.md  conftest.py
(+267 files in other folders)
